# simple_cli

./: CMakeLists.txt  Makefile  README.md  cli.c  cli.h  commands.h  main.c
